# fbx_synthesizer

./: CMakeLists.txt  joy.fbx  main.cpp  preprocessing.cpp  test.cpp
data/: eyes.txt  joy.fbx  mouth.txt  preprocessed.fbx
include/: common.h  print.h
src/: common.cpp  print.cpp
